--- a/Movie/templates/Film.html
+++ b/Movie/templates/Film.html
@@ -1,5 +1,4 @@
 {% extends 'Actor.html' %}
-
 {% block content %}
 <body>
 
@@ -15,17 +14,21 @@
 	<p>{{ film.count }} Films</p>
 	
 	{% for film in film %}
+		
+		<p>-------------------------------------------------</p>
 		<p>Title : {{ film.Title }} </p>
 		<p>Description : {{ film.Description }} </p>
 		<p>Year : {{ film.Year }} </p>
-		{% for actor in actor %}
+		{% for actor in film.actor.all %}
 			<p>Actor : {{ actor.Actor_name }} </p>
+		{% endfor%}
+		<p> </p>
+		{% for genre in film.genre.all %}
+			 <p>Genre : {{ genre.Type }}</p> 
 		{% endfor %}
-		{% for genre in genre %}
-			<p>Genre : {{ genre.Type }} </p>
-		{% endfor %}
-	{% endfor %}
+		<p>-------------------------------------------------</p>
 		
+	{% endfor %}
 
 </body>
 {% endblock %}
